# healthcare-m365-migration

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json
evals/: golden.json  run.py
examples/: end_to_end_migration.py  walkthrough.md
src/healthcare_m365/: __init__.py  backend.py  cli.py  copilot_phi_eval.py  hipaa_gate.py  migration_planner.py  post_cutover_audit.py  wave_rollback.py
tests/: test_backend.py  test_copilot_phi_eval.py  test_hipaa_gate.py  test_migration_planner.py  test_post_cutover_audit.py  test_wave_rollback.py
